<resources>
    <string name="app_name">Student Management App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="students_from_excel">Students from Excel</string>
    <string name="no_data_explorer">No Data</string>
    <string name="dashboard">Dashboard</string>
    <string name="location">"Location: "</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="students_from_csv">Students from CSV</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="button_add_student">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="dialog_add_student_title">ADD STUDENT</string>
    <string name="dialog_group_number">Group Number:</string>
    <string name="matricol">Student ID</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="student_added">The student was added</string>
    <string name="error_add_student_title">Error adding student.</string>
    <string name="error_add_student_message">Please check again the inputs</string>
    <string name="OK">OK</string>
    <string name="student_id_duplicated_title">Student ID found in database</string>
    <string name="student_id_duplicated_message">It seems like there already exists a student with the same ID. Student was not added.</string>
    <string name="file_parsed">The file was parsed.</string>
    <string name="no_data">No records found.\n\nYou can select files in the left menu.</string>
    <string name="student_menu_edit">Edit student</string>
    <string name="student_menu_delete">Delete student</string>
    <string name="student_not_found">The selected student was not found.</string>
    <string name="button_update_student">UPDATE</string>
    <string name="error_update_student_title">Error updating student.</string>
    <string name="error_update_student_message">Please check again the inputs</string>
    <string name="error_update_student">An error occurred</string>
    <string name="add_note">+Note</string>
    <string name="student_list_button_1">+GRADE</string>
    <string name="student_list_button_2">SOME ACTION</string>
    <string name="add_grade">ADD GRADE</string>
    <string name="button_add_grade">ADD GRADE</string>
    <string name="grade">GRADE</string>
    <string name="lab_no">HOMEWORK</string>
    <string name="title_activity_display_message">Student</string>
    <string name="no_grades">No grades given yet.</string>
    <string name="homework_number">Homework number: </string>
    <string name="date">Date:</string>
    <string name="grade_display">Grade:</string>
    <string name="professor_name">Professor name</string>
    <string name="name_surname_cs_ubbcluj_ro">name.surname@cs.ubbcluj.ro</string>
    <string name="presence">+PRESENCE</string>
    <string name="button_add_presence">add presence</string>
    <string name="course_number">Course Number</string>
    <string name="error">Some error occurred due the drive syncing</string>

</resources>
