<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="3dp"
    android:layout_marginRight="3dp"
    android:orientation="vertical"
    android:paddingBottom="5dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="5dp"
        android:text="@string/homework_number"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/secondary_text_light" />

    <TextView
        android:id="@+id/textViewLabNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/secondary_text_light" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginRight="5dp"
        android:text="@string/grade_display"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/secondary_text_light" />

    <TextView
        android:id="@+id/textViewGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toEndOf="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/secondary_text_light" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toLeftOf="@+id/textViewDate"
        android:layout_toStartOf="@+id/textViewDate"
        android:text="@string/date"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/secondary_text_light" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/secondary_text_light" />

</RelativeLayout>